--- a/admin/.eslintrc
+++ b/admin/.eslintrc
@@ -2,26 +2,24 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
   },
-  "extends": [
-    "prettier",
-    "plugin:react/jsx-runtime",
-    "plugin:jsx-a11y/recommended",
-    "plugin:react-hooks/recommended",
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "requireConfigFile": false,
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "settings": {
     "react": {
-      "createClass": "createReactClass", // Regex for Component Factory to use,
-      // default to "createReactClass"
-      "pragma": "React", // Pragma to use, default to "React"
-      "fragment": "Fragment", // Fragment to use (may be a property of <pragma>), default to "Fragment"
-      "version": "detect", // React version. "detect" automatically picks the version you have installed.
-      // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
-      // It will default to "latest" and warn if missing, and to "detect" in the future
-      "flowVersion": "0.53" // Flow version
+      "version": "detect"
     },
     "import/resolver": {
       "node": {
@@ -29,57 +27,37 @@
       }
     }
   },
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "impliedStrict": true,
-      "jsx": true
-    },
-    "ecmaVersion": 12
-  },
-  "plugins": ["prettier", "react", "react-hooks"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "prettier"
+  ],
+  "plugins": ["react", "react-hooks", "jsx-a11y", "prettier"],
   "rules": {
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
     "react/react-in-jsx-scope": "off",
-    "no-undef": "off",
+    "react/jsx-uses-react": "off",
+    "react/jsx-uses-vars": "error",
+    "react/prop-types": "warn",
     "react/display-name": "off",
-    "react/jsx-filename-extension": "off",
-    "no-param-reassign": "off",
-    "react/prop-types": 1,
-    "react/require-default-props": "off",
-    "react/no-array-index-key": "off",
-    "react/jsx-props-no-spreading": "off",
-    "react/forbid-prop-types": "off",
-    "import/order": "off",
-    "import/no-cycle": "off",
-    "no-console": "off",
-    "jsx-a11y/anchor-is-valid": "off",
-    "prefer-destructuring": "off",
-    "no-shadow": "off",
-    "import/no-named-as-default": "off",
-    "import/no-extraneous-dependencies": "off",
-    "jsx-a11y/no-autofocus": "off",
-    "no-restricted-imports": [
-      "error",
-      {
-        "patterns": []
-      }
+    "react/jsx-filename-extension": [
+      "warn",
+      { "extensions": [".jsx", ".js"] }
     ],
+    "react/jsx-props-no-spreading": "off",
+    "no-console": "off",
     "no-unused-vars": [
-      "error",
-      {
-        "ignoreRestSiblings": false
-      }
+      "warn",
+      { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }
     ],
     "prettier/prettier": [
       "warn",
       {
-        "bracketSpacing": true,
         "printWidth": 140,
         "singleQuote": true,
         "trailingComma": "none",
+        "bracketSpacing": true,
         "tabWidth": 2,
         "useTabs": false,
         "endOfLine": "auto"
