Frontend .env file changed  ready for Vercel deployment

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,10 +1,12 @@
-# REACT_APP_BACKEND_URL=https://api.school.com/api/v1/
-# REACT_APP_BACKEND_URL_REL=https://api.school.com/uploads/
-# REACT_APP_BACKEND=https://api.school.com/
 
 
 
 
-REACT_APP_BACKEND_URL=http://localhost:8000/api/v1/
-REACT_APP_BACKEND_URL_REL=http://localhost:8000/uploads/
-REACT_APP_BACKEND=http://localhost:8000/
+# REACT_APP_BACKEND_URL=http://localhost:8000/api/v1/
+# REACT_APP_BACKEND_URL_REL=http://localhost:8000/uploads/
+# REACT_APP_BACKEND=http://localhost:8000/
+
+
+REACT_APP_BACKEND_URL=https://novarsis-full-1.onrender.com/api/v1/
+REACT_APP_BACKEND_URL_REL=https://novarsis-full-1.onrender.com/uploads/
+REACT_APP_BACKEND=https://novarsis-full-1.onrender.com/
