--- a/frontend/.env
+++ b/frontend/.env
@@ -7,6 +7,6 @@
 # REACT_APP_BACKEND=http://localhost:8000/
 
 
-REACT_APP_BACKEND_URL=https://novarsis-full-1.onrender.com/api/v1/
-REACT_APP_BACKEND_URL_REL=https://novarsis-full-1.onrender.com/uploads/
-REACT_APP_BACKEND=https://novarsis-full-1.onrender.com/
+REACT_APP_BACKEND_URL=https://novarsis-website-full.onrender.com/api/v1/
+REACT_APP_BACKEND_URL_REL=https://novarsis-website-full.onrender.com/uploads/
+REACT_APP_BACKEND=https://novarsis-website-full.onrender.com/
