--- a/admin/.env
+++ b/admin/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=https://novarsis-full-1.onrender.com/api/v1
-REACT_APP_BACKEND=https://novarsis-full-1.onrender.com/
+REACT_APP_BACKEND_URL=https://novarsis-website-full.onrender.com/api/v1
+REACT_APP_BACKEND=https://novarsis-website-full.onrender.com/
 
